add slicing in python sequence
- list slicing
- tuple slicing
- string slicing

--- a/1-data_structures_basics/03-list.ipynb
+++ b/1-data_structures_basics/03-list.ipynb
@@ -99,6 +99,7 @@
     "  - if all elements are strings, then the smallest string (ordered lexicographically) is returned.\n",
     "- `sum(x)` : Sums start and the items of an iterable from left to right and returns the total.\n",
     "  - only for numeric values\n",
+    "- `len(x)` : Return the number of items in a container.\n",
     "- `list.reverse()` : Reverse the elements of the list in place.\n",
     "- `list.sort()` : Sort the items of the list in place, by default in ascending order. Use `reverse=True` for descending order.\n",
     "  - if all elements are strings, then they are sorted lexicographically."
@@ -156,6 +157,125 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Slicing (List, Tuple, String)\n",
+    "\n",
+    "- way to extract a subsequence (slice) from a sequence (list, tuple, string) in Python.\n",
+    "- syntax is `sequence[start:stop:step]`\n",
+    "  - start by default is 0 and is _inclusive_\n",
+    "  - stop by default is the length of the sequence and is _exclusive_\n",
+    "  - step by default is 1\n",
+    "\n",
+    "> **Note:** Slicing in Python is similar to the `substring` method in Java or the `slice` method in C++."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slicing in List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 30, 50]\n",
+      "[10, 20, 30, 40]\n",
+      "[30, 40, 50]\n",
+      "[20, 30, 40]\n",
+      "[50, 40, 30]\n",
+      "[50, 40, 30, 20, 10]\n",
+      "[50, 40, 30, 20, 10]\n",
+      "[10, 20, 30, 40, 50]\n",
+      "[10, 20, 30, 40, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [10,20,30,40,50]\n",
+    "print(l[0:5:2])        # start:0, stop:5, step:2\n",
+    "print(l[:4])           # start: 0, stop:4, step:1\n",
+    "print(l[2:])           # start:2,  stop:end of string, step:1\n",
+    "print(l[1:4])\n",
+    "print(l[4:1:-1])       # start:4, stop:1,step:-1\n",
+    "print(l[-1:-6:-1])     # start:end,\n",
+    "print(l[::-1])\n",
+    "print(l[0:5])\n",
+    "print(l[:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slicing in Tuple, String\n",
+    "\n",
+    "- `is` operator returns `True` if both variables point to the same object, `False` otherwise.\n",
+    "- `in` operator returns `True` if the element is present in the sequence, `False` otherwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [10,20,30]\n",
+    "l2 = l1[:]\n",
+    "t1 = (10,20,30)\n",
+    "t2 = t1[:]          # tuple having same element has same id\n",
+    "s1 = \"alok\"\n",
+    "s2 = s1[:]          # string of same value have same id\n",
+    "print(l1 is l2)\n",
+    "print(t1 is t2)\n",
+    "print(s1 is s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = (10,20,30)\n",
+    "t2 = t1\n",
+    "print(t1 is t2)\n",
+    "\n",
+    "s1 = \"alok\"\n",
+    "s2 = s1\n",
+    "print(s1 is s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
