--- a/1-data_structures_basics/03-list.ipynb
+++ b/1-data_structures_basics/03-list.ipynb
@@ -46,7 +46,7 @@
     "- `list.index(x)` : Return the index in the list of the first item whose value is x. Raises a ValueError if there is no such item.\n",
     "- `list.index(x, start, end)` : Return the index in the list of the first item whose value is x, within the slice `list[start:end]`. Raises a ValueError if there is no such item. `start` is _inclusive_ and `end` is _exclusive_.\n",
     "\n",
-    "`in` operator is used to check if an element is present in the list or not. Returns `True` if the element is present in the list, `False` otherwise."
+    "> **Note:** `in` operator is used to check if an element is present in the list or not. Returns `True` if the element is present in the list, `False` otherwise."
    ]
   },
   {
