--- a/1-data_structures_basics/03-list.ipynb
+++ b/1-data_structures_basics/03-list.ipynb
@@ -205,7 +205,7 @@
     "print(l[1:4])\n",
     "print(l[4:1:-1])       # start:4, stop:1,step:-1\n",
     "print(l[-1:-6:-1])     # start:end,\n",
-    "print(l[::-1])\n",
+    "print(l[::-1])         # reverse of list\n",
     "print(l[0:5])\n",
     "print(l[:])"
    ]
@@ -217,7 +217,9 @@
     "### Slicing in Tuple, String\n",
     "\n",
     "- `is` operator returns `True` if both variables point to the same object, `False` otherwise.\n",
-    "- `in` operator returns `True` if the element is present in the sequence, `False` otherwise."
+    "- `in` operator returns `True` if the element is present in the sequence, `False` otherwise.\n",
+    "\n",
+    "> **Note:** When the sliced tuple/string has same elements as the original tuple/string, then a new object is not created. Instead, the same object is returned because they are immutable."
    ]
   },
   {
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +272,234 @@
     "s2 = s1\n",
     "print(s1 is s2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comprehensions in Python\n",
+    "\n",
+    "- concise way to create lists, dictionaries, and sets in Python\n",
+    "- syntax is `[expression for item in iterable]`\n",
+    "  - `expression` is the output of the comprehension\n",
+    "  - `item` is the variable that takes the value of the items in the iterable\n",
+    "  - `iterable` is the sequence of items that are used to create the comprehension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List Comprehensions\n",
+    "\n",
+    "- syntax is `[expression for item in iterable if condition]`\n",
+    "  - `condition` is an optional filter that only includes items for which the condition is `True`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n",
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using list comprehension\n",
+    "l1 = [x for x in range(11) if x % 2 == 0]\n",
+    "print(l1)\n",
+    "\n",
+    "# regular way\n",
+    "l2 = []\n",
+    "for x in range(11):\n",
+    "    if x % 2 == 0:\n",
+    "        l2.append(x)\n",
+    "print(l2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- `string.startswith()` method returns True if the string starts with the specified value, otherwise False.\n",
+    "- `string.upper()` method returns the string in uppercase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'o', 'a', 'i', 'a']\n",
+      "['ALOK', 'ASIA', 'ALASKA']\n",
+      "[7, 14, 21, 28, 35, 42, 49, 56, 63, 70]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"Alok Shandilya\"\n",
+    "l = [x for x in s if x in \"aeiouAEIOU\"]\n",
+    "print(l)\n",
+    "\n",
+    "l = [\"alok\", \"asia\", \"alaska\", \"haryana\"]\n",
+    "l = [x.upper() for x in l if x.startswith(\"a\")]\n",
+    "print(l)\n",
+    "\n",
+    "l = [x * 7 for x in range(1, 11)]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set Comprenhensions\n",
+    "\n",
+    "- can be created with any iterable (range, list, tuple, string, dictionary)\n",
+    "- syntax is `{expression for item in iterable if condition}`\n",
+    "  - condition is an optional filter that only includes items for which the condition is `True`\n",
+    "- **_sets do not allow duplicate elements_**\n",
+    "- sets are unordered, so the order of the elements in the set may not be the same as the order of the elements in the iterable\n",
+    "- sets are mutable, so they can be modified after they are created"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10, 20, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [10, 20, 3, 4, 10, 20, 7, 3]\n",
+    "\n",
+    "s1 = {x for x in l if x % 2 == 0}\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionary Comprehensions\n",
+    "\n",
+    "- can be created with any iterable (range, list, tuple, string, dictionary)\n",
+    "- syntax is `{key: value for item in iterable if condition}`\n",
+    "  - key is the key of the dictionary\n",
+    "  - value is the value of the dictionary\n",
+    "  - condition is an optional filter that only includes items for which the condition is `True`\n",
+    "- dictionaries do not allow duplicate keys, so if the same key appears multiple times in the comprehension, the last value will be used\n",
+    "- dictionaries are unordered, so the order of the key-value pairs in the dictionary may not be the same as the order of the items in the iterable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 3: 27, 4: 64, 2: 8, 5: 125}\n",
+      "{1: 'ID1', 2: 'ID2', 3: 'ID3', 4: 'ID4', 5: 'ID5'}\n",
+      "{101: 'alok', 103: 'shandilya', 102: 'tezpur'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 3, 4, 2, 5]\n",
+    "d = {x: x ** 3 for x in l}\n",
+    "print(d)\n",
+    "\n",
+    "d = {x: f\"ID{x}\" for x in range(1, 6)}\n",
+    "print(d)\n",
+    "\n",
+    "l1 = [101, 103, 102]\n",
+    "l2 = [\"alok\", \"shandilya\", \"tezpur\"]\n",
+    "d = {l1[i]: l2[i] for i in range(len(l1))}\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **better way to create a dictionary from two lists** is to use the `zip` function.\n",
+    "- `zip()` function returns an iterator of tuples, where the i-th tuple contains the i-th element from each of the argument sequences or iterables.\n",
+    "- `dict(zip(keys, values))` creates a dictionary from two lists, where the elements of the first list are the keys and the elements of the second list are the values.\n",
+    "- `dict()` is a constructor that creates a dictionary from a sequence of key-value pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{101: 'alok', 103: 'shandilya', 102: 'tezpur'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = dict(zip(l1, l2))\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- inverting a dictionary (key becomes value and value becomes key) can be done using dictionary comprehension\n",
+    "- `dict.items()` method returns a view object that displays a list of a dictionary's key-value tuple pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([(101, 'alok'), (102, 'shandilya'), (103, 'tezpur')])\n",
+      "{'alok': 101, 'shandilya': 102, 'tezpur': 103}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1 = {101: \"alok\", 102: \"shandilya\", 103: \"tezpur\"}\n",
+    "print(d1.items())\n",
+    "d2 = {v: k for k, v in d1.items()}\n",
+    "print(d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
